# mobile-wallet

./: package.json  vite.config.ts
src/: App.tsx  ConnectDialog.tsx  DialogWindow.tsx  NodeContext.tsx  main.tsx  router.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: walletrpc.proto
src-tauri/src/: lib.rs  lightning.rs  main.rs  paths.rs  trusted.rs  wallet.rs
src/screens/: Home.tsx  Receive.tsx  Send.tsx  SummarySend.tsx  index.ts
